--- a/shopmanager/templates/itemtable.html
+++ b/shopmanager/templates/itemtable.html
@@ -1,15 +1,42 @@
-  <table>
+{% extends "base.html" %}
+
+{% block title%} 商品列表 {% endblock %}
+{% block content %}
+<table>
   <tr>
-    <th>序号</th><th>商品类别</th><th>商品编码</th><th>内部名称</th><th>出售标题</th><th>上架星期</th><th>上架时间</th>
-      <th>推荐时间</th><th>商品图片</th>
+    <th>序号</th><th>商品类别</th><th>商品编码</th><th>内部名称</th><th>出售标题</th>
+      <th>上架星期</th><th>淘宝上架</th><th>推荐上架</th><th>设定上架</th><th>库存</th><th>商品图片</th>
   </tr>
   {% for item in items %}
-  <tr id="{{ item.num_iid }}">
+  <tr id="{{ item.num_iid }}" title="{{ item.title }}" num="{{ item.num }}">
       <td>{{ forloop.counter }}</td><td>{{ item.category_name }}</td><td>{{ item.ref_code }}</td><td></td>
       <td class="title"><a href="{{ item.detail_url }}">{{ item.title }}</a></td>
-      <td>{{ item.isoweekday }}</td><td><p>{{ item.list_day }}</p><p>{{ item.list_hm}}</p></td>
-      <td class="time-select"><p>{{ item.relist_day }}</p><p>{{ item.relist_hm}}</p></td>
+      {% if item.isoweekday == 7 %}
+      <td>周 日</td>
+      {% else %}
+      <td>周 {{ item.isoweekday }}</td>
+      {% endif %}
+      <td><p>{{ item.list_day }}</p><p>{{ item.list_hm}}</p></td>
+      <td><p>{{ item.relist_day }}</p><p>{{ item.relist_hm}}</p></td>
+      <td class="time-select">
+          {% if not item.scheduled_day %}
+          <p></p>
+          {% else %}
+              {% if item.scheduled_day == 7 %}
+              <p>周 日</p>
+              {% else %}
+              <p>周 {{ item.scheduled_day }}</p>
+              {% endif %}
+          {% endif %}
+          {% if item.scheduled_hm %}
+          <p>{{ item.scheduled_hm}}</p>
+          {% else %}
+          <p></p>
+          {% endif %}
+      </td>
+      <td>{{ item.num }}</td>
       <td><img src={{  item.pic_url }} class="profile-image"></td>
   </tr>
   {% endfor %}
   </table>
+{% endblock %}
