--- a/shopmanager/templates/weektable.html
+++ b/shopmanager/templates/weektable.html
@@ -31,7 +31,7 @@
       <td>
       {% for item in c.items %}
       {% if item.slot == slot %}
-      <a id="{{ item.num_iid }}" class="wrap-image">
+      <a id="{{ item.num_iid }}" title="{{ item.title }}" num="{{ item.num }}" class="wrap-image">
           <span class="time-select"><img src={{ item.pic_url }} class="profile-image"></span>
       </a>
       {% endif %}
