--- a/shopmanager/templates/itemtable.html
+++ b/shopmanager/templates/itemtable.html
@@ -12,7 +12,7 @@
 <table>
   <tr>
     <th>序号</th><th>商品类别</th><th>商品编码</th><th>内部名称</th><th>出售标题</th>
-      <th>上架星期</th><th>淘宝上架</th><th>推荐上架</th><th>设定上架</th><th>库存</th><th>商品图片</th>
+      <th>上架星期</th><th>淘宝上架</th><th>推荐上架</th><th>设定上架</th><th>库存</th><th>商品图片</th><th>同步状态</th>
   </tr>
   {% for item in items %}
   <tr id="{{ item.num_iid }}" title="{{ item.title }}" num="{{ item.num }}">
@@ -43,6 +43,19 @@
       </td>
       <td>{{ item.num }}</td>
       <td><img src={{  item.pic_url }} class="profile-image"></td>
+      {% if item.status == "execerror" %}
+      <td style="background-color:red">{{ item.status }}</td>
+      {% else %}  
+          {% if item.status == "unscheduled" %}
+          <td style="background-color:pink">{{ item.status }}</td>
+          {% else %}  
+              {% if item.status == "success" %}
+              <td style="background-color:grey">{{ item.status }}</td>
+              {% else %}
+              <td>{{ item.status }}</td>
+              {% endif %}
+           {% endif %}
+       {% endif %}
   </tr>
   {% endfor %}
   </table>
