--- a/shopmanager/templates/keywords_itemsrank.html
+++ b/shopmanager/templates/keywords_itemsrank.html
@@ -3,8 +3,8 @@
 <html>
 <head>
     <title>keywords-items-rank</title>
-    <script src='{{ STATIC_URL }}/js/jquery-1.7.1.min.js' type= 'text/javascript'></script>
-    <script src='{{ STATIC_URL }}/js/highcharts.js' type= 'text/javascript'></script>
+    <script src='{{ STATIC_URL }}js/jquery-1.7.1.min.js' type= 'text/javascript'></script>
+    <script src='{{ STATIC_URL }}js/highcharts.js' type= 'text/javascript'></script>
     {% load chartit %}
     {{ keywordsrankchart|load_charts:"container1" }}
 </head>
