--- a/shopmanager/templates/keywords_itemsrank.html
+++ b/shopmanager/templates/keywords_itemsrank.html
@@ -3,20 +3,33 @@
 <html>
 <head>
     <title>keywords-items-rank</title>
-    <script src='{{ STATIC_URL }}/js/jquery-1.7.1.min.js' type= 'text/javascript'></script>
-    <script src='{{ STATIC_URL }}/js/highcharts.js' type= 'text/javascript'></script>
+    <script src='{{ STATIC_URL }}js/jquery-1.7.1.min.js' type= 'text/javascript'></script>
+    <script src='{{ STATIC_URL }}js/highcharts.js' type= 'text/javascript'></script>
     {% load chartit %}
-    {{ keywordsrankchart|load_charts:"container1" }}
+    {{ keywordsrankcharts|load_charts:"container1,container2,container3,container4,container5,container6,container7,container8,container9,container10,container11,container12,container13,container14" }}
 </head>
 <body>
+
     <div id='container1'> Chart will be rendered here </div>
-    <div id='container2'>
+    <div id='container2'> Chart will be rendered here </div>
+    <div id='container3'> Chart will be rendered here </div>
+    <div id='container4'> Chart will be rendered here </div>
+    <div id='container5'> Chart will be rendered here </div>
+    <div id='container6'> Chart will be rendered here </div>
+    <div id='container7'> Chart will be rendered here </div>
+    <div id='container8'> Chart will be rendered here </div>
+    <div id='container9'> Chart will be rendered here </div>
+    <div id='container10'> Chart will be rendered here </div>
+    <div id='container11'> Chart will be rendered here </div>
+    <div id='container12'> Chart will be rendered here </div>
+    <div id='container13'> Chart will be rendered here </div>
+    <div id='container14'> Chart will be rendered here </div>
+
+    <div id='items'>
         <table>
             <tr>
                 <td>nick:</td>
                 <td>{{ nick }}</td>
-                <td>keyword:</td>
-                <td>{{ keyword }}</td>
             </tr>
         {% for item in items %}
             <tr >
