add orders models week,and make second yaxis for chart

--- a/shopmanager/templates/hourly_ordernumschart.html
+++ b/shopmanager/templates/hourly_ordernumschart.html
@@ -11,6 +11,7 @@
 <body>
 
     <div id='container1'> Chart will be rendered here </div>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/modules/exporting.js"></script>
 
 </body>
 </html>
