change template title in chinese

--- a/shopmanager/templates/hourly_ordernumschart.html
+++ b/shopmanager/templates/hourly_ordernumschart.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>keywords-items-rank</title>
+    <title>订单统计（按时，按天，按周，按月）</title>
     <script src='{{ STATIC_URL }}js/jquery-1.7.1.min.js' type= 'text/javascript'></script>
     <script src='{{ STATIC_URL }}js/highcharts.js' type= 'text/javascript'></script>
     {% load chartit %}
