--- a/shopmanager/templates/keywords_rankstatistic.html
+++ b/shopmanager/templates/keywords_rankstatistic.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>宝贝关键词排名统计</title>
+    <title>宝贝关键词排名趋势统计</title>
     <script src='{{ STATIC_URL }}js/jquery-1.7.1.min.js' type= 'text/javascript'></script>
     <script src='{{ STATIC_URL }}js/highcharts.js' type= 'text/javascript'></script>
     {% load chartit %}
