--- a/shopmanager/templates/base.html
+++ b/shopmanager/templates/base.html
@@ -1,40 +1,48 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>{% block title %}商品自动上架时间分析{% endblock %}</title>
-    <link href="{{ STATIC_URL }}css/base.css" type="text/css" rel="stylesheet" />
-    <link href="{{ STATIC_URL }}css/autolist.css" type="text/css" rel="stylesheet" />
+<html>
+  <head>
+    <title>{% block title %}{% endblock %}</title>
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
+    <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
+    {% block style %}
+    {% endblock %}
+    <script src="{{ STATIC_URL }}js/less.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    {% block preload_script %}
+    {% endblock %}
+  </head>
 
-{% block head_script %}
-    <script src="{{ STATIC_URL }}closure-library/closure/goog/base.js"></script>
-    <script src="{{ STATIC_URL }}js/autolist.js" type="text/javascript"></script>
-{% endblock %}
-</head>
-
-<body>
-
-<div class="container">
-  <div class="header"><a href="#"><img src="/static/youni-logo.jpg" alt="在此处插入徽标" name="Insert_logo" width="180" height="90" id="Insert_logo" style="background: #C6D580; display:block;" /></a>
-    <!-- end .header --></div>
-  <div class="content">
-      {% block content %}
+  <body>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collaps" data-target=".nav-collaps">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">Taobao</a>
+          <div class="nav-collaps">
+            <ul class="nav">
+              <li class="active"><a href="http://localhost:8000/search/rank/chart/2012-03-17/2012-03-18/?keywords=%E7%9D%A1%E8%A2%8B%20%E5%84%BF%E7%AB%A5%20%E9%98%B2%E8%B8%A2%E8%A2%AB&nicks=%E4%BC%98%E5%B0%BC%E5%B0%8F%E5%B0%8F%E4%B8%96%E7%95%8C,%E4%BC%98%E5%B0%BC%E4%B8%96%E7%95%8C%E6%97%97%E8%88%B0%E5%BA%97#">ItemRank</a></li>
+              <li><a href="http://127.0.0.1:8000/search/ordernum/pivotchart/2012-03-17/2012-03-18/?nicks=%E4%BC%98%E5%B0%BC%E5%B0%8F%E5%B0%8F%E4%B8%96%E7%95%8C,%E4%BC%98%E5%B0%BC%E4%B8%96%E7%95%8C%E6%97%97%E8%88%B0%E5%BA%97&cat_by=day&type=pay&xy=vertical">OrderNum</a></li>
+              <li><a href="#">Test</a></li>
+            </ul>
+            <ul class="nav pull-right">
+              <li><a href="#">User</a></li>
+              <li class="divider-vertical"></li>
+              <li><a href="#">Logout</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      {% block container %}
       {% endblock %}
-
-  {% include "timeselection.html" %}
-  
-
-  </div>
-  <div class="footer">
-    <p>脚注</p>
-    <!-- end .footer --></div>
-  <!-- end .container --></div>
-
-{% block script %}
-    <script type="text/javascript">
-        new autolist.ItemList();
-    </script>
-{% endblock %}
-
-</body>
+    </div>
+    {% block delayed_script %}
+    {% endblock %}
+  </body>
 </html>
