--- a/shopmanager/templates/hourly_ordernumschart.html
+++ b/shopmanager/templates/hourly_ordernumschart.html
@@ -1,6 +1,33 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+{% extends 'base.html' %}
+
+{% block style %}
+    <link href="{{ STATIC_URL }}css/order_nums.less" rel="stylesheet/less" type="text/css" />
+{% endblock %}
+
+{% block preload_script %}
+  <script src='{{ STATIC_URL }}js/highcharts.js' type= 'text/javascript'></script>
+  {% load chartit %}
+  {{ ordersdatacht|load_charts:"chart_1" }}
+{% endblock %}
+
+{% block container %}
+  <div class="row">
+    <div class="span3 tool-area">
+      <form class="form-horizontal">
+        <fieldset>
+          <div class="control-group">
+          </div>
+        </fieldset>
+      </form>
+    </div>
+    <div class="span9 charts-area">
+      <div id="chart_1"></div>
+    </div>
+  </div>
+{% endblock %}
+
+
+<!--<html>
 <head>
     <title>订单统计（按时，按天，按周，按月）</title>
     <script src='{{ STATIC_URL }}js/jquery-1.7.1.min.js' type= 'text/javascript'></script>
@@ -14,4 +41,4 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/modules/exporting.js"></script>
 
 </body>
-</html>
+</html>-->
