--- a/shopmanager/templates/keywords_itemsrank.html
+++ b/shopmanager/templates/keywords_itemsrank.html
@@ -1,33 +1,87 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-    <title>宝贝关键词排名统计</title>
-    <script src='{{ STATIC_URL }}js/jquery-1.7.1.min.js' type= 'text/javascript'></script>
-    <script src='{{ STATIC_URL }}js/highcharts.js' type= 'text/javascript'></script>
-    {% load chartit %}
-</head>
-<body>
-    {% for chart in keywordsrankcharts  %}
-        <div id='container{{ forloop.counter }}'> Chart will be rendered here </div>
-    {% endfor %}
+{% extends 'base.html' %}
 
-    <div id='items'>
-        <table>
-        <thead style="background-color:#2C7400"><td>num_iid</td><td>nick</td><td>title</td><td>image</td></thead>
-        {% for item in items %}
-            <tr >
-                <td>{{ item.item_id }}</td>
-                <td>{{ item.nick }}</td>
-                <td>{{ item.title }}</td>
-                <td><img src="{{  item.pic_url }}" style="width: 60px;height: 60px;"></td>
-            </tr>
-        {% endfor %}
-        </table>
+{% block title %}
+  ItemsRank
+{% endblock %}
 
+{% block style %}
+    <link href="{{ STATIC_URL }}css/items_rank.less" rel="stylesheet/less" type="text/css" />
+    <link href="{{ STATIC_URL }}datepicker/css/datepicker.css" rel="stylesheet" type="text/css" />
+{% endblock %}
+
+{% block preload_script %}
+  <script src="{{ STATIC_URL }}datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script>
+  <script src='{{ STATIC_URL }}js/highcharts.js' type= 'text/javascript'></script>
+  {% load chartit %}
+  {% load get_range %}
+{% endblock %}
+
+{% block container %}
+  <div class="row">
+    <div class="span3 tool-area">
+      <form class="form-horizontal">
+        <fieldset>
+          <legend>Filters</legend>
+          <div class="control-group">
+            <label class="control-label" for="start_dp">Start Date: </label>
+            <div class="controls">
+              <input class="input-medium" id="start_dp" value={% now "Y-m-d" %} type="text"/>
+            </div>
+          </div>
+          <div class="control-group">
+            <label class="control-label" for="end_dp">End Date: </label>
+            <div class="controls">
+              <input class="input-medium" id="end_dp" value={% now "Y-m-d" %} type="text"/>
+            </div>
+          </div>
+          <div class="control-group">
+            <label class="control-label">Seller Nicks: </label>
+            <div class="controls nicks">
+              <div class="nick-control">
+                <input class="input-medium" type="text" value="优尼小小世界" />
+                <a class="cancel" href="#"><i class="icon-minus"></i></a>
+              </div>
+              <div class="nick-control">
+                <input class="input-medium" type="text" value="优尼世界旗舰店"/>
+                <a class="cancel" href="#"><i class="icon-minus"></i></a>
+              </div>
+              <a class="btn btn-primary pull-right plus-nick">
+                <i class="icon-plus icon-white"></i>
+                Plus
+              </a>
+            </div>
+          </div>
+          <div class="control-group">
+            <label class="control-label">Key Words: </label>
+            <div class="controls key-words-selects">
+              <div class="select-control">
+                <select class="input-medium key-word">
+                    {% for key in keywords %}
+                      <option>{{ key }}</option>
+                    {% endfor %}
+                </select>
+                <a class="cancel" href="#"><i class="icon-minus"></i></a>
+              </div>
+              <a class="btn btn-primary pull-right plus-keyword">
+                <i class="icon-plus icon-white"></i>
+                Plus
+              </a>
+            </div>
+          </div>
+          <div class="form-actions">
+            <a class="btn btn-success refresh">
+              <i class="icon-repeat icon-white"></i>
+              Refresh
+            </a>
+          </div>
+        </fieldset>
+      </form>
     </div>
-    {{ keywordsrankcharts|load_charts:"" }}
-    <script type="text/javascript" src="{{ STATIC_URL }}js/modules/exporting.js"></script>
+    <div class="span9 charts-area">
+    </div>
+  </div>
+{% endblock %}
 
-</body>
-</html>
+{% block delayed_script %}
+  <script src="{{ STATIC_URL }}js/items_rank.js" type="text/javascript"></script>
+  {% endblock %}
