--- a/shopmanager/templates/base.html
+++ b/shopmanager/templates/base.html
@@ -1,14 +1,14 @@
 <html>
   <head>
     <title>{% block title %}{% endblock %}</title>
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
-    <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
+    <link href="{{ MEDIA_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="{{ MEDIA_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
+    <link href="{{ MEDIA_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
     {% block style %}
     {% endblock %}
-    <script src="{{ STATIC_URL }}js/less.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/jquery-1.7.1.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="{{ MEDIA_URL }}js/less.min.js" type="text/javascript"></script>
+    <script src="{{ MEDIA_URL }}js/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="{{ MEDIA_URL }}bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     {% block preload_script %}
     {% endblock %}
   </head>
