--- a/shopmanager/templates/keywords_rankstatistic.html
+++ b/shopmanager/templates/keywords_rankstatistic.html
@@ -3,8 +3,8 @@
 <html>
 <head>
     <title>宝贝关键词排名趋势统计</title>
-    <script src='{{ STATIC_URL }}js/jquery-1.7.1.min.js' type= 'text/javascript'></script>
-    <script src='{{ STATIC_URL }}js/highcharts.js' type= 'text/javascript'></script>
+    <script src='{{ MEDIA_URL }}js/jquery-1.7.1.min.js' type= 'text/javascript'></script>
+    <script src='{{ MEDIA_URL }}js/highcharts.js' type= 'text/javascript'></script>
     {% load chartit %}
 </head>
 <body>
@@ -27,7 +27,7 @@
 
     </div>
     {{ keywordsrankcharts|load_charts:"" }}
-    <script type="text/javascript" src="{{ STATIC_URL }}js/modules/exporting.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/modules/exporting.js"></script>
 
 </body>
 </html>
