--- a/shopmanager/templates/chart_render_template.html
+++ b/shopmanager/templates/chart_render_template.html
@@ -4,8 +4,8 @@
 <head>
     <title>数据图表</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <script src='{{ MEDIA_URL }}js/jquery-1.7.1.min.js' type= 'text/javascript'></script>
-    <script src='{{ MEDIA_URL }}js/highcharts.js' type= 'text/javascript'></script>
+    <script src='{{ STATIC_URL }}script/jquery-1.7.1.min.js' type= 'text/javascript'></script>
+    <script src='{{ STATIC_URL }}script/highcharts.js' type= 'text/javascript'></script>
     {% load chartit %}
 </head>
 <body>
@@ -30,7 +30,7 @@
     </div>
     {% endif %}
     {{ charts|load_charts:"" }}
-    <script type="text/javascript" src="{{ MEDIA_URL }}js/modules/exporting.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}script/modules/exporting.js"></script>
 
 </body>
 </html>
