--- a/shopmanager/templates/hourly_ordernumschart.html
+++ b/shopmanager/templates/hourly_ordernumschart.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block style %}
-    <link href="{{ MEDIA_URL }}css/order_nums.less" rel="stylesheet/less" type="text/css" />
+    <link href="{{ STATIC_URL }}css/order_nums.less" rel="stylesheet/less" type="text/css" />
 {% endblock %}
 
 {% block preload_script %}
-  <script src='{{ MEDIA_URL }}js/highcharts.js' type= 'text/javascript'></script>
+  <script src='{{ STATIC_URL }}script/highcharts.js' type= 'text/javascript'></script>
   {% load chartit %}
   {{ ordersdatacht|load_charts:"chart_1" }}
 {% endblock %}
@@ -30,15 +30,15 @@
 <!--<html>
 <head>
     <title>订单统计（按时，按天，按周，按月）</title>
-    <script src='{{ MEDIA_URL }}js/jquery-1.7.1.min.js' type= 'text/javascript'></script>
-    <script src='{{ MEDIA_URL }}js/highcharts.js' type= 'text/javascript'></script>
+    <script src='{{ STATIC_URL }}script/jquery-1.7.1.min.js' type= 'text/javascript'></script>
+    <script src='{{ STATIC_URL }}script/highcharts.js' type= 'text/javascript'></script>
     {% load chartit %}
     {{ ordersdatacht|load_charts:"container1" }}
 </head>
 <body>
 
     <div id='container1'> Chart will be rendered here </div>
-    <script type="text/javascript" src="{{ MEDIA_URL }}js/modules/exporting.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}script/modules/exporting.js"></script>
 
 </body>
 </html>-->
