--- a/shopmanager/templates/related_orders_template.html
+++ b/shopmanager/templates/related_orders_template.html
@@ -18,14 +18,16 @@
         <table align="center">
 	        <thead style="background-color:#2C7400">
 	        <td>商品外部编码</td>
+	        <td>商品图片</td>
 	        <td>商品名称</td>
 	        <td>组合商品销售数量</td>
 	        </thead>
 	        {% for item in object %}
 	            <tr >
 	            	<td >{{ item.0 }}</td>
-					<td >{{ item.1 }}</td>
+					<td ><img src="{{ item.1 }}" width="40px" heigth="40px"></img></td>
 					<td >{{ item.2 }}</td>
+					<td >{{ item.3 }}</td>
 	            </tr>
 	        {% endfor %}
         </table>
