--- a/shopmanager/templates/logs.html
+++ b/shopmanager/templates/logs.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 
 {% block title%} 操作记录 {% endblock %}
-{% block content %}
+{% block navbar %}{% endblock %}
+
+{% block container %}
 <div>
-<table>
+<table class="table table-bordered table-striped table-condensed">
   <tr>
     <th>序号</th><th>商品类别</th><th>商品编码</th><th>内部名称</th><th>出售标题</th>
       <th>设定星期</th><th>设定时间</th><th>库存</th><th>商品图片</th><th>操作类型</th><th>操作时间</th><th>结果状态</th>
