--- a/shopmanager/templates/base.html
+++ b/shopmanager/templates/base.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>{% block title %}{% endblock %}</title>
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -10,10 +11,13 @@
     <script src="{{ STATIC_URL }}script/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     {% block preload_script %}
+      <script src="{{ STATIC_URL }}closure-library/closure/goog/base.js" type="text/javascript"></script>
+      <script src="{{ STATIC_URL }}script/autolist.js" type="text/javascript"></script>
     {% endblock %}
   </head>
 
   <body>
+  {% block navbar %}
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -38,6 +42,7 @@
         </div>
       </div>
     </div>
+   {% endblock %}
     <div class="container">
       {% block container %}
       {% endblock %}
