--- a/shopmanager/templates/autolist/tablesummary.html
+++ b/shopmanager/templates/autolist/tablesummary.html
@@ -11,8 +11,8 @@
 {% block container %}
 <div class="tabbable">
     <ul class="nav nav-tabs">
-        <li class="active"><a href="#">当前时间</a></li>
-        <li><a href="#">计划时间</a></li>
+        <li class="active"><a href="#">调整时间</a></li>
+        <!-- <li><a href="#">计划时间</a></li> -->
     </ul>
 
     <div class="tab-content">
