--- a/shopmanager/templates/autolist/tablesummary.html
+++ b/shopmanager/templates/autolist/tablesummary.html
@@ -1,8 +1,5 @@
-{% extends "base.html" %}
+{% extends "autolist/base.html" %}
 
-{% block style %}
-<link href="{{ STATIC_URL }}css/autolist.css" rel="stylesheet/less" type="text/css" />
-{% endblock %}
 
 {% block title %} 上架时间统计 {% endblock %}
 
